--- a/pages/self/wallet/wallet.wxml
+++ b/pages/self/wallet/wallet.wxml
@@ -1,6 +1,34 @@
 <!--pages/self/wallet/wallet.wxml-->
-<import src="../../templates/building/building.wxml"/>
+<import src="../../templates/empty/empty.wxml"/>
+<import src="../../templates/pay/pay.wxml"/>
 
 <view class="container">
-  <template is="building"></template>
+  <template is="pay" data="{{...pay}}"></template>
+  <view class="wallet-header">
+    <image class="wallet-header-pig" src="../../../images/other/wallet2.png"></image>
+    <view class="wallet-header-title">我的钱包</view>
+    <view class="wallet-header-number">¥ {{data.walletBalance || 0}}</view>
+  </view>
+  <scroll-view
+    scroll-y="true" 
+    class="wallet-detail-list bg">
+    <!-- 暂无 -->
+    <template wx:if="{{!walletRecordList.length}}" is="empty"></template>
+    <block wx:for="{{walletRecordList}}" wx:key="{{index}}">
+      <view class="wallet-detail-item">
+        <view class="wallet-detail-item-left">
+          {{conf[item.loyaltyTraceType] || item.loyaltyTraceType}}
+          <label class="wallet-detail-item-time">{{item.date}}</label>
+        </view>
+        <view class="wallet-detail-item-right">+{{item.loyaltyPoint}}</view>
+      </view>
+    </block>
+  </scroll-view>
+  <picker bindchange="bindPickerChange" 
+          value="{{index}}" 
+          range="{{payNumberList}}">
+    <view class="picker top-up">
+      充值
+    </view>
+  </picker>
 </view>
