--- a/pages/self/wallet/wallet.wxss
+++ b/pages/self/wallet/wallet.wxss
@@ -1,2 +1,81 @@
 /* pages/self/wallet/wallet.wxss */
-@import "../../templates/building/building.wxss";
+/* pages/self/integral/integral.wxss */
+@import "../../templates/empty/empty.wxss";
+@import "../../templates/pay/pay.wxss";
+
+.wallet-header {
+  width: 100%;
+  height: 382rpx;
+  background: -webkit-linear-gradient(bottom, #ED1C24 , #ff874b);
+  background: linear-gradient(to bottom, #ED1C24 , #ff874b);
+  text-align: center;
+  color: #fff;
+  margin-bottom: 20rpx;
+}
+
+.wallet-header-pig {
+  width: 160rpx;
+  height: 160rpx;
+  position: relative;
+  margin-top: 30rpx;
+}
+
+.wallet-header-title {
+  font-size: 26rpx;
+}
+
+.wallet-header-number {
+  font-size: 72rpx;
+}
+
+.wallet-detail-list {
+  height: calc(100vh - 402rpx);
+  margin-bottom: 70rpx;
+}
+
+.wallet-detail-item {
+  height: 126rpx;
+  margin: 0 20rpx;
+  padding: 20rpx 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
+  font-size: 28rpx;
+  border-top: 1rpx solid #f0f0f0;
+}
+
+.wallet-detail-item:first-child {
+  border-top: none;
+}
+
+.wallet-detail-item-left {
+  position: relative;
+  color: #383838;
+  flex: 1;
+}
+
+.wallet-detail-item-time {
+  position: absolute;
+  left: 0;
+  bottom: -42rpx;
+  color: #b4b4b4;
+  font-size: 20rpx;
+}
+
+.wallet-detail-item-right {
+  color: #59ba44;
+}
+
+.top-up {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70rpx;
+  background-color: rgba(237, 28, 36, .8);
+  line-height: 70rpx;
+  text-align: center;
+  color: #fff;
+}
