--- a/pages/help/pay/pay.wxml
+++ b/pages/help/pay/pay.wxml
@@ -6,9 +6,9 @@
     <text class="select-cell-title">问题类别</text>
     <picker 
       class="select-cell-picker"
-      bindchange="bindQusPickerChange" value="{{qusIndex}}" range="{{qusArr}}">
+      bindchange="binVipQusPickerChange" value="{{vipQusIndexqusIndex}}" range="{{vipQusArr}}">
       <view class="picker">
-        {{qusArr[qusIndex]}}
+        {{vipQusArr[vipQusIndex]}}
       </view>
     </picker>
   </view>
@@ -16,5 +16,5 @@
     <icon type="info" size="12" color="#ED1C24"/>
     {{duration}}天内同一个问题类别收费{{amount}}元
   </view>
-  <button bindtap="bindHelpSubmitTap" class="pay-help-btn">付费求助</button>
+  <button bindtap="bindVipHelpSubmitTap" class="pay-help-btn">付费求助</button>
 </view>
