--- a/pages/templates/course/course.wxml
+++ b/pages/templates/course/course.wxml
@@ -15,7 +15,7 @@
       data-type="row"
       class="content-detail weui-flex">
       <image
-        src="../../../images/temp/{{index+1}}.jpeg" 
+        src="{{'https://app.shangnarxue.com/edq/' + item.columnContentImgUrl}}" 
         class="content-detail-image"></image>
       <view class="content-detail-info">
         <view class="content-datail-state">
