1. help call auth dialog should be tap button to jump; 2. show the article really title.

--- a/pages/templates/course/course.wxml
+++ b/pages/templates/course/course.wxml
@@ -7,6 +7,7 @@
       bindtap="bindCourseTap" 
       wx:for-index="index"
       data-showType="{{showType}}"
+      data-contentTitle="{{item.columnContentTitle}}"
       data-courseOfferId="{{item.courseOfferId}}"
       data-courseId="{{item.courseId}}"
       data-columnId="{{item.columnId}}"
@@ -98,6 +99,7 @@
       data-courseOfferId="{{item.courseOfferId}}"
       data-courseId="{{item.courseId}}"
       data-columnId="{{item.columnId}}"
+      data-contentTitle="{{item.columnContentTitle}}"
       data-columnContentId="{{item.columnContentId}}"
       data-columnContentUrl="{{item.columnContentUrl}}"
       data-teacherId="{{item.teacherId}}"
