Optimized the date of style, and the picture url.

--- a/pages/index/index/index.wxml
+++ b/pages/index/index/index.wxml
@@ -77,7 +77,7 @@
           class="teacher-item"
           bindtap="bindTeacherDetailTap">
           <image
-            src="{{item.userPo213}}" 
+            src="{{item.userPortraitUrl}}" 
             class="teacher-item-image"></image>
           <view class="teacher-item-name text-overflow">{{item.userNickname}}</view>
         </view>
